--- a/test/README
+++ b/test/README
@@ -58,4 +58,10 @@ makeStackHistoTemplate.py :
    Notice that the histograms are not actually summed by makeStackHistoTemplate.py itself: 
    you have to sum them yourself when running combinePlotsTemplate.py
 
- 
+plotSeveralHistograms.C :
+
+   Simple macro to take a number of histograms from a given root file and plot them on the 
+   same canvas.
+   To use it, open it and edit the "infile", the number of histograms "NN", the array of 
+   names of histograms, and the array of legend keys.
+
